// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalizeCkanPackage > snapshots Canada records in EN and fr > crown-en 1`] = `
[
  {
    "displayValue": "Current Land Act tenures and applications for such tenures: a subset of crown land dispositions that are issued for specific purposes and periods of time under an agreement between an individual or company and the provincial government for an interest in crown land. Conveyances of ownership are not included. For example Leases, Licenses and Reserves are included, but Crown Grants and Acquisitions are not. Historical records (e.g. expired, replaced, or completed) are not included in this view.",
    "id": "notes",
    "label": "Description",
    "recommended": true,
    "type": "markdown",
  },
  {
    "displayValue": "Government of British Columbia",
    "id": "organization",
    "label": "Publisher - Current Organization Name",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": "Open Government Licence - British Columbia",
    "id": "license",
    "label": "Licence",
    "recommended": true,
    "type": "url",
  },
  {
    "displayValue": "Open Maps",
    "id": "collection",
    "label": "Collection Type",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Organization Name: Government of British Columbia; Government of British Columbia; BC Parks; Electronic Mail Address: clrhelp@gov.bc.ca",
    "id": "contact_information",
    "label": "Contact Information",
    "recommended": false,
    "type": "keyvalue",
  },
  {
    "displayValue": "Crown Lands Registry Help",
    "id": "creator",
    "label": "Creator",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": "2011-03-09",
    "id": "date_published",
    "label": "Date Published",
    "recommended": true,
    "type": "date",
  },
  {
    "displayValue": "Organization Name: Government of British Columbia; Government of British Columbia; BC Parks; Electronic Mail Address: clrhelp@gov.bc.ca",
    "id": "distributor",
    "label": "Distributor",
    "recommended": false,
    "type": "keyvalue",
  },
  {
    "displayValue": "2026-01-27",
    "id": "federated_date_modified",
    "label": "Federated Dateset Modified Date",
    "recommended": false,
    "type": "date",
  },
  {
    "displayValue": "Irregular",
    "id": "frequency",
    "label": "Maintenance and Update Frequency",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": "dataset; jeuDonnées",
    "id": "hierarchy_level",
    "label": "Hierarchy level",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Provincial",
    "id": "jurisdiction",
    "label": "Jurisdiction",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": [
      "CLRS",
      "Canada",
      "Crown Land",
      "Crown Land Registry",
      "Crown Tenure",
      "tantalis",
      "Government information",
    ],
    "id": "keywords",
    "label": "Keywords",
    "recommended": true,
    "type": "list",
  },
  {
    "displayValue": "clrhelp@gov.bc.ca",
    "id": "maintainer_email",
    "label": "Contact Email",
    "recommended": true,
    "type": "email",
  },
  {
    "displayValue": "Government of British Columbia; Government of British Columbia; BC Parks",
    "id": "metadata_contact",
    "label": "Metadata contact",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "2020-06-05T16:15:22.956352",
    "id": "metadata_created",
    "label": "Metadata Created",
    "recommended": false,
    "type": "date",
  },
  {
    "displayValue": "2026-01-28T19:48:03.845764",
    "id": "metadata_modified",
    "label": "Metadata Modified",
    "recommended": false,
    "type": "date",
  },
  {
    "displayValue": "Government of British Columbia",
    "id": "org_title_at_publication",
    "label": "Publisher - Organization Name at Publication",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "EPSG:3005,EPSG,unknown",
    "id": "reference_system_information",
    "label": "Reference System Information",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "pointOfContact; contact",
    "id": "responsible_role",
    "label": "Role",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Unrestricted",
    "id": "restrictions",
    "label": "Access Restrictions",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Type: Polygon",
    "id": "spatial",
    "label": "Spatial",
    "recommended": false,
    "type": "keyvalue",
  },
  {
    "displayValue": [
      "Grid",
    ],
    "id": "spatial_representation_type",
    "label": "Spatial Representation Type",
    "recommended": true,
    "type": "list",
  },
  {
    "displayValue": "Ongoing",
    "id": "status",
    "label": "Status",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": [
      "Economics and Industry",
    ],
    "id": "subject",
    "label": "Subject",
    "recommended": true,
    "type": "list",
  },
  {
    "displayValue": [
      "Economy",
    ],
    "id": "topic_category",
    "label": "Topic category",
    "recommended": true,
    "type": "list",
  },
]
`;

exports[`normalizeCkanPackage > snapshots Canada records in EN and fr > crown-fr 1`] = `
[
  {
    "displayValue": "Les tenures en vigueur en vertu de la Loi foncière et les demandes de telles tenures : un sous-ensemble de dispositions de terres domaniales qui sont émises à des fins et pour des périodes spécifiques en vertu d'un accord entre une personne ou une entreprise et le gouvernement provincial concernant un intérêt sur des terres domaniales. Les transferts de propriété ne sont pas inclus. Par exemple, les baux, les licences et les réserves sont inclus, mais pas les subventions et acquisitions de l'État. Les enregistrements historiques (par exemple, expirés, remplacés ou complétés) ne sont pas inclus dans cette vue.

** Cet élément de métadonnées provenant d’une tierce partie a été traduit à l'aide d'un outil de traduction automatisée (Amazon Translate). **",
    "id": "notes",
    "label": "Description",
    "type": "markdown",
  },
  {
    "displayValue": "Gouvernment de la Colombie-Britannique",
    "id": "organization",
    "label": "Éditeur - Nom actuel de l’organisation",
    "type": "text",
  },
  {
    "displayValue": "Open Government Licence - British Columbia",
    "id": "license",
    "label": "Licence",
    "type": "url",
  },
  {
    "displayValue": "Cartes Ouvertes",
    "id": "collection",
    "label": "Type de collection",
    "type": "text",
  },
  {
    "displayValue": "Organization Name: Gouvernement de la Colombie-Britannique; Gouvernement de la Colombie-Britannique; BC Parks; Electronic Mail Address: clrhelp@gov.bc.ca",
    "id": "contact_information",
    "label": "Information contact",
    "type": "keyvalue",
  },
  {
    "displayValue": "Crown Lands Registry Help",
    "id": "creator",
    "label": "Auteur",
    "type": "text",
  },
  {
    "displayValue": "2011-03-09",
    "id": "date_published",
    "label": "Date de publication",
    "type": "date",
  },
  {
    "displayValue": "Organization Name: Gouvernement de la Colombie-Britannique; Gouvernement de la Colombie-Britannique; BC Parks; Electronic Mail Address: clrhelp@gov.bc.ca",
    "id": "distributor",
    "label": "Distributeur",
    "type": "keyvalue",
  },
  {
    "displayValue": "2026-01-27",
    "id": "federated_date_modified",
    "label": "Date de modification de l'jeu de données fédérées",
    "type": "date",
  },
  {
    "displayValue": "Irrégulier",
    "id": "frequency",
    "label": "Fréquence d'entretien et de mise à jour",
    "type": "text",
  },
  {
    "displayValue": "dataset; jeuDonnées",
    "id": "hierarchy_level",
    "label": "Portée hiérarchique",
    "type": "text",
  },
  {
    "displayValue": "Provinciale",
    "id": "jurisdiction",
    "label": "Juridiction",
    "type": "text",
  },
  {
    "displayValue": [
      "CLRS",
      "Canada",
      "Terre de la Couronne",
      "Registre des terres de la Couronne",
      "Mandat de la Couronne",
      "tantale",
      "Information gouvernementale",
    ],
    "id": "keywords",
    "label": "Mots clés",
    "type": "list",
  },
  {
    "displayValue": "clrhelp@gov.bc.ca",
    "id": "maintainer_email",
    "label": "Courriel - Personne-ressource",
    "type": "email",
  },
  {
    "displayValue": "Gouvernement de la Colombie-Britannique; Gouvernement de la Colombie-Britannique; BC Parks",
    "id": "metadata_contact",
    "label": "Contact métadonnée",
    "type": "text",
  },
  {
    "displayValue": "2020-06-05T16:15:22.956352",
    "id": "metadata_created",
    "label": "Metadata Created",
    "type": "date",
  },
  {
    "displayValue": "2026-01-28T19:48:03.845764",
    "id": "metadata_modified",
    "label": "Metadata Modified",
    "type": "date",
  },
  {
    "displayValue": "Gouvernment de la Colombie-Britannique",
    "id": "org_title_at_publication",
    "label": "Organisation - Titre lors de la publication",
    "type": "text",
  },
  {
    "displayValue": "EPSG:3005,EPSG,unknown",
    "id": "reference_system_information",
    "label": "Information système référence",
    "type": "text",
  },
  {
    "displayValue": "pointOfContact; contact",
    "id": "responsible_role",
    "label": "Rôle",
    "type": "text",
  },
  {
    "displayValue": "Non affecté",
    "id": "restrictions",
    "label": "Restrictions d'accès",
    "type": "text",
  },
  {
    "displayValue": "Type: Polygon",
    "id": "spatial",
    "label": "Élément spatial",
    "type": "keyvalue",
  },
  {
    "displayValue": [
      "Grille",
    ],
    "id": "spatial_representation_type",
    "label": "Type représentation spatiale",
    "type": "list",
  },
  {
    "displayValue": "En continu",
    "id": "status",
    "label": "État",
    "type": "text",
  },
  {
    "displayValue": [
      "Économie et industrie",
    ],
    "id": "subject",
    "label": "Sujet",
    "type": "list",
  },
  {
    "displayValue": [
      "Économie",
    ],
    "id": "topic_category",
    "label": "Catégorie thématique",
    "type": "list",
  },
]
`;

exports[`normalizeCkanPackage > snapshots Canada records in EN and fr > nrd-en 1`] = `
[
  {
    "displayValue": "The spatial representation for a Natural Resource (NR) District, that is an administrative area established by the Ministry, within NR Regions.",
    "id": "notes",
    "label": "Description",
    "recommended": true,
    "type": "markdown",
  },
  {
    "displayValue": "Government of British Columbia",
    "id": "organization",
    "label": "Publisher - Current Organization Name",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": "Open Government Licence - British Columbia",
    "id": "license",
    "label": "Licence",
    "recommended": true,
    "type": "url",
  },
  {
    "displayValue": "Open Maps",
    "id": "collection",
    "label": "Collection Type",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Organization Name: Government of British Columbia; Government of British Columbia; GeoBC Inquiries; Electronic Mail Address: Susan.Westmacott@gov.bc.ca",
    "id": "contact_information",
    "label": "Contact Information",
    "recommended": false,
    "type": "keyvalue",
  },
  {
    "displayValue": "Susan Westmacott",
    "id": "creator",
    "label": "Creator",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": "2015-04-09",
    "id": "date_published",
    "label": "Date Published",
    "recommended": true,
    "type": "date",
  },
  {
    "displayValue": "Organization Name: Government of British Columbia; Government of British Columbia; GeoBC Inquiries; Electronic Mail Address: Susan.Westmacott@gov.bc.ca",
    "id": "distributor",
    "label": "Distributor",
    "recommended": false,
    "type": "keyvalue",
  },
  {
    "displayValue": "2026-01-27",
    "id": "federated_date_modified",
    "label": "Federated Dateset Modified Date",
    "recommended": false,
    "type": "date",
  },
  {
    "displayValue": "As Needed",
    "id": "frequency",
    "label": "Maintenance and Update Frequency",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": "dataset; jeuDonnées",
    "id": "hierarchy_level",
    "label": "Hierarchy level",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Provincial",
    "id": "jurisdiction",
    "label": "Jurisdiction",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": [
      "FADM",
      "administrative division",
      "boundaries",
      "boundary",
      "forestry",
      "forests",
      "Government information",
    ],
    "id": "keywords",
    "label": "Keywords",
    "recommended": true,
    "type": "list",
  },
  {
    "displayValue": "Susan.Westmacott@gov.bc.ca",
    "id": "maintainer_email",
    "label": "Contact Email",
    "recommended": true,
    "type": "email",
  },
  {
    "displayValue": "Government of British Columbia; Government of British Columbia; GeoBC Inquiries",
    "id": "metadata_contact",
    "label": "Metadata contact",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "2020-06-11T13:54:49.094790",
    "id": "metadata_created",
    "label": "Metadata Created",
    "recommended": false,
    "type": "date",
  },
  {
    "displayValue": "2026-01-28T19:42:01.759925",
    "id": "metadata_modified",
    "label": "Metadata Modified",
    "recommended": false,
    "type": "date",
  },
  {
    "displayValue": "Government of British Columbia",
    "id": "org_title_at_publication",
    "label": "Publisher - Organization Name at Publication",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "EPSG:3005,EPSG,unknown",
    "id": "reference_system_information",
    "label": "Reference System Information",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "custodian; conservateur",
    "id": "responsible_role",
    "label": "Role",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Unrestricted",
    "id": "restrictions",
    "label": "Access Restrictions",
    "recommended": false,
    "type": "text",
  },
  {
    "displayValue": "Type: Polygon",
    "id": "spatial",
    "label": "Spatial",
    "recommended": false,
    "type": "keyvalue",
  },
  {
    "displayValue": [
      "Grid",
    ],
    "id": "spatial_representation_type",
    "label": "Spatial Representation Type",
    "recommended": true,
    "type": "list",
  },
  {
    "displayValue": "Completed",
    "id": "status",
    "label": "Status",
    "recommended": true,
    "type": "text",
  },
  {
    "displayValue": [
      "Government and Politics",
    ],
    "id": "subject",
    "label": "Subject",
    "recommended": true,
    "type": "list",
  },
  {
    "displayValue": [
      "Boundaries",
    ],
    "id": "topic_category",
    "label": "Topic category",
    "recommended": true,
    "type": "list",
  },
]
`;

exports[`normalizeCkanPackage > snapshots Canada records in EN and fr > nrd-fr 1`] = `
[
  {
    "displayValue": "La représentation spatiale d'un district de ressources naturelles (RN), c'est-à-dire une zone administrative établie par le ministère, au sein des régions NR.

** Cet élément de métadonnées provenant d’une tierce partie a été traduit à l'aide d'un outil de traduction automatisée (Amazon Translate). **",
    "id": "notes",
    "label": "Description",
    "type": "markdown",
  },
  {
    "displayValue": "Gouvernment de la Colombie-Britannique",
    "id": "organization",
    "label": "Éditeur - Nom actuel de l’organisation",
    "type": "text",
  },
  {
    "displayValue": "Open Government Licence - British Columbia",
    "id": "license",
    "label": "Licence",
    "type": "url",
  },
  {
    "displayValue": "Cartes Ouvertes",
    "id": "collection",
    "label": "Type de collection",
    "type": "text",
  },
  {
    "displayValue": "Organization Name: Gouvernement de la Colombie-Britannique; Gouvernement de la Colombie-Britannique; GeoBC Inquiries; Electronic Mail Address: Susan.Westmacott@gov.bc.ca",
    "id": "contact_information",
    "label": "Information contact",
    "type": "keyvalue",
  },
  {
    "displayValue": "Susan Westmacott",
    "id": "creator",
    "label": "Auteur",
    "type": "text",
  },
  {
    "displayValue": "2015-04-09",
    "id": "date_published",
    "label": "Date de publication",
    "type": "date",
  },
  {
    "displayValue": "Organization Name: Gouvernement de la Colombie-Britannique; Gouvernement de la Colombie-Britannique; GeoBC Inquiries; Electronic Mail Address: Susan.Westmacott@gov.bc.ca",
    "id": "distributor",
    "label": "Distributeur",
    "type": "keyvalue",
  },
  {
    "displayValue": "2026-01-27",
    "id": "federated_date_modified",
    "label": "Date de modification de l'jeu de données fédérées",
    "type": "date",
  },
  {
    "displayValue": "Au besoin",
    "id": "frequency",
    "label": "Fréquence d'entretien et de mise à jour",
    "type": "text",
  },
  {
    "displayValue": "dataset; jeuDonnées",
    "id": "hierarchy_level",
    "label": "Portée hiérarchique",
    "type": "text",
  },
  {
    "displayValue": "Provinciale",
    "id": "jurisdiction",
    "label": "Juridiction",
    "type": "text",
  },
  {
    "displayValue": [
      "FERME",
      "division administrative",
      "frontières",
      "limite",
      "sylviculture",
      "forêts",
      "Information gouvernementale",
    ],
    "id": "keywords",
    "label": "Mots clés",
    "type": "list",
  },
  {
    "displayValue": "Susan.Westmacott@gov.bc.ca",
    "id": "maintainer_email",
    "label": "Courriel - Personne-ressource",
    "type": "email",
  },
  {
    "displayValue": "Gouvernement de la Colombie-Britannique; Gouvernement de la Colombie-Britannique; GeoBC Inquiries",
    "id": "metadata_contact",
    "label": "Contact métadonnée",
    "type": "text",
  },
  {
    "displayValue": "2020-06-11T13:54:49.094790",
    "id": "metadata_created",
    "label": "Metadata Created",
    "type": "date",
  },
  {
    "displayValue": "2026-01-28T19:42:01.759925",
    "id": "metadata_modified",
    "label": "Metadata Modified",
    "type": "date",
  },
  {
    "displayValue": "Gouvernment de la Colombie-Britannique",
    "id": "org_title_at_publication",
    "label": "Organisation - Titre lors de la publication",
    "type": "text",
  },
  {
    "displayValue": "EPSG:3005,EPSG,unknown",
    "id": "reference_system_information",
    "label": "Information système référence",
    "type": "text",
  },
  {
    "displayValue": "custodian; conservateur",
    "id": "responsible_role",
    "label": "Rôle",
    "type": "text",
  },
  {
    "displayValue": "Non affecté",
    "id": "restrictions",
    "label": "Restrictions d'accès",
    "type": "text",
  },
  {
    "displayValue": "Type: Polygon",
    "id": "spatial",
    "label": "Élément spatial",
    "type": "keyvalue",
  },
  {
    "displayValue": [
      "Grille",
    ],
    "id": "spatial_representation_type",
    "label": "Type représentation spatiale",
    "type": "list",
  },
  {
    "displayValue": "Complété",
    "id": "status",
    "label": "État",
    "type": "text",
  },
  {
    "displayValue": [
      "Gouvernement et vie politique",
    ],
    "id": "subject",
    "label": "Sujet",
    "type": "list",
  },
  {
    "displayValue": [
      "Frontières",
    ],
    "id": "topic_category",
    "label": "Catégorie thématique",
    "type": "list",
  },
]
`;
